--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "core-js": "^2.0.0",
     "flux": "^2.1.1",
     "jquery": "^2.2.3",
+    "keymirror": "^0.1.1",
     "lodash": "^4.12.0",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
