--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "core-js": "^2.0.0",
     "d3": "^3.5.17",
     "flux": "^2.1.1",
+    "google-map-react": "^0.13.0",
     "jquery": "^2.2.3",
     "keymirror": "^0.1.1",
     "lodash": "^4.12.0",
