--- a/package.json
+++ b/package.json
@@ -76,7 +76,9 @@
     "normalize.css": "^4.0.0",
     "rd3": "^0.6.3",
     "react": "^15.0.0",
+    "react-addons": "^0.9.1-deprecated",
     "react-dom": "^15.0.0",
+    "react-google-maps": "^4.11.0",
     "react-router": "^2.4.0"
   }
 }
